--- a/chart/performance.tex
+++ b/chart/performance.tex
@@ -23,9 +23,10 @@
     height=3.5in,
     xmin=0.5,
     ymin=0,
-    ymax=149,
+    ymax=87,
     xtick pos=bottom,
     xtick distance=5,
+    ytick distance=10,
     xticklabel shift=-1pt,
     tick label style={font=\sansmath\sffamily},
     every axis label={font=\sansmath\sffamily},
@@ -81,93 +82,93 @@
   \addlegendentry{Display}
   \addlegendimage{color=Display, fill, area legend}
   \addplot[color=Display] coordinates {
-    (1, 83.01)
-    (2, 88.71)
-    (3, 91.66)
-    (4, 95.97)
-    (5, 97.90)
-    (6, 100.73)
-    (7, 102.97)
-    (8, 112.14)
-    (9, 112.51)
+    (1, 47.07)
+    (2, 50.84)
+    (3, 52.65)
+    (4, 55.05)
+    (5, 56.43)
+    (6, 58.02)
+    (7, 59.37)
+    (8, 64.16)
+    (9, 64.10)
   };
   \addlegendentry{LowerExp}
   \addlegendimage{color=LowerExp, fill, area legend}
   \addplot[color=LowerExp] coordinates {
-    (1, 82.75)
-    (2, 97.15)
-    (3, 101.43)
-    (4, 103.66)
-    (5, 106.24)
-    (6, 108.05)
-    (7, 109.00)
-    (8, 119.74)
-    (9, 117.46)
+    (1, 48.23)
+    (2, 55.50)
+    (3, 58.07)
+    (4, 60.24)
+    (5, 62.44)
+    (6, 63.76)
+    (7, 64.98)
+    (8, 69.77)
+    (9, 70.50)
   };
   \addlegendentry{dtoa}
   \addlegendimage{color=dtoa, fill, area legend}
   \addplot[color=dtoa] coordinates {
-    (1, 44.40)
-    (2, 49.53)
-    (3, 51.89)
-    (4, 53.92)
-    (5, 55.63)
-    (6, 56.83)
-    (7, 57.87)
-    (8, 65.08)
-    (9, 65.41)
+    (1, 30.46)
+    (2, 33.17)
+    (3, 33.93)
+    (4, 34.99)
+    (5, 35.54)
+    (6, 35.99)
+    (7, 36.27)
+    (8, 41.30)
+    (9, 41.42)
   };
   \addlegendentry{ryu}
   \addlegendimage{color=ryu, fill, area legend}
   \addplot[color=ryu] coordinates {
-    (1, 34.23)
-    (2, 35.70)
-    (3, 35.29)
-    (4, 34.11)
-    (5, 33.20)
-    (6, 32.01)
-    (7, 32.10)
-    (8, 32.32)
-    (9, 32.56)
+    (1, 23.94)
+    (2, 24.56)
+    (3, 24.03)
+    (4, 23.38)
+    (5, 22.74)
+    (6, 22.07)
+    (7, 21.36)
+    (8, 21.85)
+    (9, 21.98)
   };
   \addlegendentry{lexical}
   \addlegendimage{color=lexical, fill, area legend}
   \addplot[color=lexical] coordinates {
-    (1, 31.44)
-    (2, 32.18)
-    (3, 31.25)
-    (4, 31.70)
-    (5, 31.24)
-    (6, 31.25)
-    (7, 30.68)
-    (8, 34.69)
-    (9, 34.73)
+    (1, 21.46)
+    (2, 22.33)
+    (3, 21.60)
+    (4, 22.09)
+    (5, 21.32)
+    (6, 21.87)
+    (7, 21.09)
+    (8, 24.62)
+    (9, 24.56)
   };
   \addlegendentry{teju}
   \addlegendimage{color=teju, fill, area legend}
   \addplot[color=teju] coordinates {
-    (1, 24.78)
-    (2, 26.99)
-    (3, 26.59)
-    (4, 26.03)
-    (5, 25.49)
-    (6, 24.83)
-    (7, 24.27)
-    (8, 30.35)
-    (9, 30.38)
+    (1, 16.22)
+    (2, 17.67)
+    (3, 16.60)
+    (4, 16.37)
+    (5, 15.83)
+    (6, 15.36)
+    (7, 15.06)
+    (8, 20.48)
+    (9, 20.42)
   };
   \addlegendentry{zmij}
   \addlegendimage{color=zmij, fill, area legend}
   \addplot[color=zmij] coordinates {
-    (1, 22.14)
-    (2, 22.39)
-    (3, 22.46)
-    (4, 22.73)
-    (5, 22.53)
-    (6, 22.49)
-    (7, 22.25)
-    (8, 22.50)
-    (9, 22.47)
+    (1, 13.83)
+    (2, 14.17)
+    (3, 14.20)
+    (4, 14.39)
+    (5, 14.31)
+    (6, 14.30)
+    (7, 14.23)
+    (8, 14.50)
+    (9, 14.48)
   };
 \end{axis}
 \begin{axis}[
@@ -181,141 +182,141 @@
   set layers,
 ]
   \addplot[color=Display] coordinates {
-    (1, 97.68)
-    (2, 102.04)
-    (3, 105.56)
-    (4, 109.19)
-    (5, 111.41)
-    (6, 113.96)
-    (7, 115.89)
-    (8, 117.90)
-    (9, 118.49)
-    (10, 119.94)
-    (11, 120.10)
-    (12, 121.60)
-    (13, 123.73)
-    (14, 124.52)
-    (15, 126.69)
-    (16, 129.92)
-    (17, 137.88)
+    (1, 55.95)
+    (2, 59.38)
+    (3, 61.50)
+    (4, 63.09)
+    (5, 64.62)
+    (6, 66.13)
+    (7, 67.13)
+    (8, 68.23)
+    (9, 68.40)
+    (10, 69.02)
+    (11, 69.23)
+    (12, 69.84)
+    (13, 70.96)
+    (14, 71.43)
+    (15, 72.29)
+    (16, 74.39)
+    (17, 78.89)
   };
   \addplot[color=LowerExp] coordinates {
-    (1, 81.12)
-    (2, 96.13)
-    (3, 99.29)
-    (4, 102.19)
-    (5, 107.22)
-    (6, 107.09)
-    (7, 108.73)
-    (8, 111.28)
-    (9, 112.25)
-    (10, 113.13)
-    (11, 112.98)
-    (12, 114.57)
-    (13, 116.99)
-    (14, 117.68)
-    (15, 120.49)
-    (16, 122.50)
-    (17, 131.91)
+    (1, 49.93)
+    (2, 57.32)
+    (3, 60.46)
+    (4, 62.70)
+    (5, 64.68)
+    (6, 65.92)
+    (7, 66.39)
+    (8, 67.57)
+    (9, 68.56)
+    (10, 68.57)
+    (11, 68.39)
+    (12, 69.16)
+    (13, 70.37)
+    (14, 70.85)
+    (15, 71.97)
+    (16, 73.35)
+    (17, 77.85)
   };
   \addplot[color=dtoa] coordinates {
-    (1, 47.81)
-    (2, 54.06)
-    (3, 56.80)
-    (4, 59.62)
-    (5, 61.86)
-    (6, 63.34)
-    (7, 64.59)
-    (8, 65.54)
-    (9, 65.58)
-    (10, 66.04)
-    (11, 66.98)
-    (12, 68.10)
-    (13, 69.22)
-    (14, 70.81)
-    (15, 71.57)
-    (16, 73.27)
-    (17, 79.99)
+    (1, 35.04)
+    (2, 37.65)
+    (3, 38.71)
+    (4, 39.55)
+    (5, 40.18)
+    (6, 40.72)
+    (7, 40.88)
+    (8, 41.13)
+    (9, 41.10)
+    (10, 41.53)
+    (11, 42.33)
+    (12, 43.04)
+    (13, 43.75)
+    (14, 44.41)
+    (15, 44.80)
+    (16, 45.99)
+    (17, 49.26)
   };
   \addplot[color=ryu] coordinates {
-    (1, 56.11)
-    (2, 57.38)
-    (3, 56.42)
-    (4, 55.21)
-    (5, 53.77)
-    (6, 51.96)
-    (7, 50.70)
-    (8, 48.92)
-    (9, 47.98)
-    (10, 48.06)
-    (11, 46.57)
-    (12, 44.54)
-    (13, 43.50)
-    (14, 41.52)
-    (15, 41.07)
-    (16, 39.37)
-    (17, 40.24)
+    (1, 36.89)
+    (2, 37.98)
+    (3, 36.60)
+    (4, 35.51)
+    (5, 34.61)
+    (6, 33.47)
+    (7, 32.95)
+    (8, 32.02)
+    (9, 30.93)
+    (10, 31.33)
+    (11, 29.72)
+    (12, 28.43)
+    (13, 27.39)
+    (14, 26.32)
+    (15, 25.72)
+    (16, 24.65)
+    (17, 25.35)
   };
   \addplot[color=lexical] coordinates {
-    (1, 37.22)
-    (2, 38.81)
-    (3, 37.15)
-    (4, 38.04)
-    (5, 36.67)
-    (6, 37.81)
-    (7, 36.23)
-    (8, 37.64)
-    (9, 37.19)
-    (10, 37.53)
-    (11, 36.36)
-    (12, 36.91)
-    (13, 35.97)
-    (14, 36.47)
-    (15, 37.04)
-    (16, 36.90)
-    (17, 40.48)
+    (1, 23.98)
+    (2, 25.08)
+    (3, 23.79)
+    (4, 24.43)
+    (5, 23.13)
+    (6, 23.67)
+    (7, 22.55)
+    (8, 23.54)
+    (9, 24.37)
+    (10, 25.29)
+    (11, 23.96)
+    (12, 24.57)
+    (13, 23.34)
+    (14, 24.04)
+    (15, 23.05)
+    (16, 23.75)
+    (17, 26.29)
   };
   \addplot[color=teju] coordinates {
-    (1, 36.18)
-    (2, 41.17)
-    (3, 40.28)
-    (4, 39.39)
-    (5, 38.32)
-    (6, 37.24)
-    (7, 36.42)
-    (8, 35.31)
-    (9, 34.28)
-    (10, 33.21)
-    (11, 32.10)
-    (12, 31.20)
-    (13, 30.44)
-    (14, 29.54)
-    (15, 28.83)
-    (16, 28.87)
-    (17, 34.93)
+    (1, 24.53)
+    (2, 28.45)
+    (3, 27.40)
+    (4, 26.52)
+    (5, 25.64)
+    (6, 24.77)
+    (7, 24.18)
+    (8, 23.37)
+    (9, 22.68)
+    (10, 21.83)
+    (11, 21.20)
+    (12, 20.35)
+    (13, 19.63)
+    (14, 18.96)
+    (15, 18.37)
+    (16, 18.30)
+    (17, 24.05)
   };
   \addplot[color=zmij] coordinates {
-    (1, 20.10)
-    (2, 20.16)
-    (3, 20.20)
-    (4, 20.27)
-    (5, 20.22)
-    (6, 20.26)
-    (7, 20.18)
-    (8, 20.22)
-    (9, 20.14)
-    (10, 20.08)
-    (11, 20.17)
-    (12, 20.02)
-    (13, 20.11)
-    (14, 19.98)
-    (15, 19.95)
-    (16, 19.93)
-    (17, 20.09)
+    (1, 11.00)
+    (2, 11.07)
+    (3, 11.10)
+    (4, 11.10)
+    (5, 11.09)
+    (6, 11.12)
+    (7, 11.06)
+    (8, 11.11)
+    (9, 11.09)
+    (10, 11.06)
+    (11, 11.04)
+    (12, 11.03)
+    (13, 11.03)
+    (14, 11.01)
+    (15, 10.99)
+    (16, 10.95)
+    (17, 10.99)
   };
 \end{axis}
 \pgfresetboundingbox\path
-  (f32.south west) -- ++(-0.46in,-0.39in)
+  (f32.south west) -- ++(-0.41in,-0.39in)
   rectangle (f64.north east) -- ++(6pt,3pt);
 \end{tikzpicture}
 \end{document}
